1. Add whitespace nowrap to card-title and text-overflow to avoid wrapping 2. Add a new media-query to decrease card-detail height

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -180,6 +180,9 @@
 .card-title {
     font-size: calc(var(--rem) * 3.6);
     padding-bottom: calc(var(--rem) * .5);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-detail {
